Fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -13,10 +13,6 @@
     height: 100%;
 }
 
-.virtial-grid-item {
-    overflow: hidden;
-}
-
 .fixed-virtial-grid-row-columns {
     pointer-events: none;
     position: sticky;
